[tool.poetry]
name = "repl_nix_Python-Live-Bootcamp"
version = "0.1.0"
description = ""
authors = ["FatimaKotha <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQRCode = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
